# microsensor-firmware

./: .gitignore  CMakeLists.txt  README.md  pm_static.yml  prj-release.conf  prj.conf  sysbuild.conf
boards/BeeEye/BLEsensor/: BLEsensor.dts  BLEsensor.yml  BLEsensor_defconfig  Kconfig.BLEsensor  board.cmake  board.yml
boards/BeeEye/MPsensor/: Kconfig.MPsensor  Kconfig.defconfig  MPsensor_nrf54l15_cpuapp.dts  MPsensor_nrf54l15_cpuapp.yml  MPsensor_nrf54l15_cpuflpr.dts  MPsensor_nrf54l15_cpuflpr.yml  MPsensor_nrf54l15_cpuflpr_xip.dts  MPsensor_nrf54l15_cpuflpr_xip.yml  board.yml  partition.dtsi
boards/BeeEye/MPsensor/dts/bindings/: vendor-prefixes.txt
boards/BeeEye/MPsensor/dts/bindings/bee-eye/: vsense.yaml
boards/BeeEye/MPsensor/dts/bindings/custom/: vsense.yaml
src/: ble_server.c  ble_server.h  deep_sleep.c  deep_sleep.h  main.c  rtc.c  rtc.h  rtc_rv3028_addons.c  sensor.c  sensor.h  sensor_hdc2080.c  sensor_hdc2080.h  uart_printf.c  uart_printf.h  version.c  version.h  vsense.c  vsense.h  zigbee_sensor.c  zigbee_sensor.h
sysbuild/: mcuboot.conf
